changed width and height of menu to stop horizontal scroll

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -408,10 +408,10 @@ a:hover {
 
 #menu {
     color:#F2FAFF;
-    margin: 80px;
-    padding:0;
-    width: 100%;
-    height: 1600px;
+    margin: 50px;
+    width: 95%;
+    height: 1100px;
+
 }
 
 .price {
